plugins {
    id 'base'
    id 'maven-publish'
    id 'signing'
    id 'pl.allegro.tech.build.axion-release' version '1.21.1'
    id 'com.gradleup.nmcp.aggregation' version '1.4.4'
    id 'io.quarkus.extension' version '3.34.2' apply false
    id 'io.quarkus' version '3.34.2' apply false
}

// Axion-release configuration
scmVersion {
    tag {
        prefix = 'v'
        initialVersion { config, position -> '0.1.0' }
    }
    checks {
        uncommittedChanges = false
        aheadOfRemote = false
        // Disabled due to Quarkus configuration resolution issues
        snapshotDependencies = false
    }
}

allprojects {
    group = 'ai.pipestream'
    version = scmVersion.version
}

subprojects {
    apply plugin: 'java-library'
    apply plugin: 'maven-publish'
    apply plugin: 'signing'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
        if (project.name != 'integration-tests') {
            withSourcesJar()
            withJavadocJar()
        }
    }

    repositories {
        mavenLocal()
        mavenCentral()
    }

    tasks.withType(Test).configureEach {
        useJUnitPlatform()
    }

    if (project.name != 'integration-tests') {
        publishing {
            publications {
                mavenJava(MavenPublication) {
                    from components.java
                    pom {
                        name = "quarkus-grpc-gatherer (${project.name})"
                        description = 'Quarkus extension that gathers protobuf sources before grpc-zero code generation'
                        url = 'https://github.com/ai-pipestream/quarkus-grpc-gatherer'
                        licenses {
                            license {
                                name = 'MIT License'
                                url = 'https://opensource.org/licenses/MIT'
                            }
                        }
                        developers {
                            developer {
                                id = 'krickert'
                                name = 'Kristian Rickert'
                            }
                        }
                        scm {
                            connection = 'scm:git:https://github.com/ai-pipestream/quarkus-grpc-gatherer.git'
                            developerConnection = 'scm:git:ssh://git@github.com/ai-pipestream/quarkus-grpc-gatherer.git'
                            url = 'https://github.com/ai-pipestream/quarkus-grpc-gatherer'
                        }
                    }
                }
            }
                    repositories {
                        maven {
                            name = 'GitHubPackages'
                            url = uri("https://maven.pkg.github.com/${System.getenv('GITHUB_REPOSITORY') ?: 'ai-pipestream/quarkus-grpc-gatherer'}")
                            credentials {
                                username = findProperty('gpr.user') ?: System.getenv('GITHUB_ACTOR')
                                password = findProperty('gpr.key') ?: System.getenv('GITHUB_TOKEN')
                            }
                        }
                    }
        }

        signing {
            def signingKey = System.getenv('GPG_PRIVATE_KEY')
            def signingPassword = System.getenv('GPG_PASSPHRASE')
            required { signingKey != null && !signingKey.isBlank() }
            if (signingKey && signingPassword) {
                useInMemoryPgpKeys(signingKey, signingPassword)
                sign publishing.publications
            }
        }
    }
}

nmcpAggregation {
    publishAllProjectsProbablyBreakingProjectIsolation()

    centralPortal {
        username = findProperty('mavenCentralUsername') ?: System.getenv('MAVEN_CENTRAL_USERNAME')
        password = findProperty('mavenCentralPassword') ?: System.getenv('MAVEN_CENTRAL_PASSWORD')
        publishingType = 'AUTOMATIC'
        baseUrl = 'https://central.sonatype.com/'
    }
}

